[cleanup] spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.ignoreWords": [
         "oldbike"
+    ],
+    "cSpell.words": [
+        "Ceqng",
+        "Color",
+        "colors",
+        "Rect",
+        "signup"
     ]
 }
