Added circularImage() & labelledWidget() widget components. Organized circularIcon() widget. Added a credits file. Moved the app logo to images/ folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,13 @@
         "Ceqng",
         "Color",
         "colors",
+        "natalart",
+        "Pramuji",
         "Rect",
+        "Septiawan",
         "signup",
-        "tabview"
+        "tabview",
+        "vecteezy",
+        "watercolor"
     ]
 }
