Profile screen is now much more polished. CircularIcons & CircularImages now have border around them. Added new TextStyles & colors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,15 @@
         "oldbike"
     ],
     "cSpell.words": [
+        "Behavior",
         "Ceqng",
         "Color",
         "colors",
         "natalart",
+        "Okabe",
         "Pramuji",
         "Rect",
+        "Rintarou",
         "Septiawan",
         "signup",
         "tabview",
