--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ unlinked_spec.ds
 # Android related
 **/android/**/gradle-wrapper.jar
 .gradle/
+**/android/.idea/
 **/android/captures/
 **/android/gradlew
 **/android/gradlew.bat
