--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Ceqng",
         "Color",
         "colors",
+        "geolocator",
         "natalart",
         "Okabe",
         "Pramuji",
