Added integration with OpenStreetMaps (THANK YOU OPEN SOURCE COMMUNITY FOR FREE MAPS INTEGRATION!). 'Track' screen now works beautifully! Obviously, still much more work is required.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Color",
         "colors",
         "geolocator",
+        "latlong",
         "natalart",
         "Okabe",
         "Pramuji",
@@ -16,6 +17,7 @@
         "Septiawan",
         "signup",
         "tabview",
+        "timelapse",
         "vecteezy",
         "watercolor"
     ]
