--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.17.0
   auto_size_text: ^3.0.0
   geolocator: ^9.0.2
+  flutter_map: ^3.0.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_test:
