fixed minor android map issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "tabview",
         "timelapse",
         "vecteezy",
-        "watercolor"
+        "watercolor",
+        "Wifi"
     ]
 }
