--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
