--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
   provider: ^6.0.4
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
