--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   latlong2: ^0.8.1
   provider: ^6.0.4
   firebase_core: ^2.3.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
