--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.4
   firebase_core: ^2.3.0
   internet_connection_checker: ^1.0.0+1
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
