--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Color",
         "colors",
         "Dialog",
+        "disconnectivity",
         "geolocator",
         "latlong",
         "natalart",
