--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^2.3.0
   internet_connection_checker: ^1.0.0+1
   font_awesome_flutter: ^10.3.0
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
