started building the user registration screen.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "Septiawan",
         "signup",
         "tabview",
+        "teryakii",
         "timelapse",
         "vecteezy",
         "Wakelock",
