--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   persistent_bottom_nav_bar: ^5.0.2
   wakelock: ^0.6.2
+  firebase_auth: ^4.2.0
 
 dev_dependencies:
   flutter_test:
