--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "colors",
         "Dialog",
         "disconnectivity",
+        "firestore",
         "geolocator",
         "latlong",
         "natalart",
