app is now able to retrieve data from firestore to get the recent rides.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "natalart",
         "Okabe",
         "Pramuji",
+        "Rahma",
         "Rect",
         "Rintarou",
         "Septiawan",
