--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_auth: ^4.2.0
   cloud_firestore: ^4.2.0
   persistent_bottom_nav_bar_v2: ^4.2.6
+  duration: ^3.0.12
 
 dev_dependencies:
   flutter_test:
