--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloud_firestore: ^4.2.0
   persistent_bottom_nav_bar_v2: ^4.2.6
   duration: ^3.0.12
+  go_router: ^5.2.4
 
 dev_dependencies:
   flutter_test:
