--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Ceqng",
         "Color",
         "colors",
+        "datetime",
         "Dialog",
         "disconnectivity",
         "firestore",
